Changed href gallery2 line 113

--- a/homepage - spourmo/index.html
+++ b/homepage - spourmo/index.html
@@ -110,7 +110,7 @@
                 <li><a href="#">Other</a></li>
               </ul>
             </li>
-            <li><a href="https://github.com/akshatgaur2/Practice/blob/master/homepage%20-%20spourmo/pages/gallery%202.html">Watch now</a></li>
+            <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Watch now</a></li>
           </ul>
         </li>
         <li><a href="#">Plays/Dramas</a></li>
