--- a/homepage - spourmo/index.html
+++ b/homepage - spourmo/index.html
@@ -150,17 +150,17 @@
     <section id="introblocks">
       <ul class="nospace group grid-3">
         <li class="one_third">
-          <figure><a class="imgover" href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\Theatre.jpeg" alt=""></a>
+          <figure><a class="imgover" href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/Theatre.jpeg" alt=""></a>
             <figcaption><a href="#">Book Movie Ticket</a></figcaption>
           </figure>
         </li>
         <li class="one_third">
-          <figure><a class="imgover" href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\watchonline.jpg" alt=""></a>
+          <figure><a class="imgover" href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/watchonline.jpg" alt=""></a>
             <figcaption><a href="#">Watch Classics</a></figcaption>
           </figure>
         </li>
         <li class="one_third">
-          <figure><a class="imgover" href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\mini.jpeg" alt=""></a>
+          <figure><a class="imgover" href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/mini.jpeg" alt=""></a>
             <figcaption><a href="#">Special Booking</a></figcaption>
           </figure>
         </li>
@@ -189,7 +189,7 @@
       </ol>
       
     </figure>
-    <div class="one_half last"><a ><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\Future.jpeg" alt=""></a></div>
+    <div class="one_half last"><a ><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/Future.jpeg" alt=""></a></div>
     <!-- ################################################################################################ -->
   </section>
 </div>
@@ -197,7 +197,7 @@
   <section id="testimonials" class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <figure><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\watchon.jfif" alt=""></figure>
+      <figure><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/logo.jpeg" alt=""></figure>
       <h6 class="heading font-x2">About Us</h6>
       <em>Movie Booking And Watching Portal</em>
       <blockquote>Jordush is our website for Software Engineering Project Management.
@@ -222,7 +222,7 @@
     <ul id="latest" class="nospace group sd-third">
       <li class="one_third first">
         <article>
-          <figure><a class="imgover" href="https://www.linkedin.com/in/akshat-gaur-2906851a5/"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\akk.jpeg" alt=""></a>
+          <figure><a class="imgover" href="https://www.linkedin.com/in/akshat-gaur-2906851a5/"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/akk.jpeg" alt=""></a>
             <figcaption>
               <h6 class="heading">Akshat Gaur</h6>
               <ul class="nospace meta clear">
@@ -237,7 +237,7 @@
       </li>
       <li class="one_third">
         <article>
-          <figure><a class="imgover" href="https://www.linkedin.com/in/shaswat-srivastava-03a67118b/"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\Shaswatppic.jfif" alt=""></a>
+          <figure><a class="imgover" href="https://www.linkedin.com/in/shaswat-srivastava-03a67118b/"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/Shaswat.jpeg" alt=""></a>
             <figcaption>
               <h6 class="heading">Shaswat Srivastava</h6>
               <ul class="nospace meta clear">
@@ -252,7 +252,7 @@
       </li>
       <li class="one_third">
         <article>
-          <figure><a class="imgover" href="http://www.linkedin.com/in/dushyant-betala-277b8118b"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\img\Dus.jpeg" alt=""></a>
+          <figure><a class="imgover" href="http://www.linkedin.com/in/dushyant-betala-277b8118b"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/img/Dus.jpeg" alt=""></a>
             <figcaption>
               <h6 class="heading">Dushyant Betala</h6>
               <ul class="nospace meta clear">
