--- a/homepage - spourmo/pages/gallery.html
+++ b/homepage - spourmo/pages/gallery.html
@@ -75,7 +75,7 @@
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left"> 
         <!-- ################################################################################################ -->
-        <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">JORDUSH</a></h1>
+        <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">JORDUSH</a></h1>
         <!-- ################################################################################################ -->
       </div>
       <nav id="mainav" class="fl_right"> 
