--- a/homepage - spourmo/pages/gallery.html
+++ b/homepage - spourmo/pages/gallery.html
@@ -81,15 +81,15 @@
       <nav id="mainav" class="fl_right"> 
         <!-- ################################################################################################ -->
         <ul class="clear">
-          <li class="active"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Home</a></li>
+          <li class="active"><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Home</a></li>
           <li><a class="drop" href="#">Filter</a>
             <ul>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Location</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Genre</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Language</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Parental Guidance</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Latest</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Animated</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Location</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Genre</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Language</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Parental Guidance</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Latest</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Animated</a></li>
               <!--
               <li><a href="pages/full-width.html">Full Width</a></li>
               <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
@@ -101,7 +101,7 @@
           </li>
           <li><a class="drop" href="#">Screening type</a>
             <ul>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Theater</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Theater</a></li>
               <li><a class="drop" href="#">Special Screening</a>
                 <ul>
                   <li><a href="#">Mini-hall</a></li>
