gallery for theater booking done

--- a/homepage - spourmo/pages/gallery.html
+++ b/homepage - spourmo/pages/gallery.html
@@ -109,7 +109,7 @@
                   <li><a href="#">Other</a></li>
                 </ul>
               </li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Watch now</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Watch now</a></li>
             </ul>
           </li>
           <li><a href="#">Plays/Dramas</a></li>
@@ -133,18 +133,18 @@
         <figure>
           <header class="heading">Choose a movie to book</header>
           <ul class="nospace clear">
-            <li class="one_quarter first"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\Book movie - Godzilla Vs kong.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Godzilla vs Kong.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\A hidden life.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Badla.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\Book movie - Chakra.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Chakra.jpg" alt=""></a></li>
-            <li class="one_quarter first"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\Book movie - Joker.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Joker.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Kesari.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Parasite.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Psycho.jpeg" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Simba.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Stuber.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\US.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\Theater movie img\Thalaivi.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/Book%20movie%20-%20Godzilla%20Vs%20kong.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Godzilla%20vs%20Kong.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/A%20hidden%20life.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img\Badla.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90\Book%20movie%20-%20Chakra.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Chakra.jpg" alt=""></a></li>
+            <li class="one_quarter first"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/Book%20movie%20-%20Joker.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Joker.jpg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Kesari.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Parasite.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Psycho.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Simba.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Stuber.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/US.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Thalaivi.jpeg" alt=""></a></li>
           </ul>
         </figure>
       </div>
