--- a/homepage - spourmo/pages/gallery.html
+++ b/homepage - spourmo/pages/gallery.html
@@ -133,7 +133,7 @@
         <figure>
           <header class="heading">Choose a movie to book</header>
           <ul class="nospace clear">
-            <li class="one_quarter first"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/Book%20movie%20-%20Godzilla%20Vs%20kong.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Godzilla%20vs%20Kong.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/Book%20movie%20-%20Godzilla%20Vs%20kong.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Godzilla%20vs%20Kong.jpeg" alt=""></a></li>
             <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/A%20hidden%20life.jpeg" alt=""></a></li>
             <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img\Badla.jpeg" alt=""></a></li>
             <li class="one_quarter"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90\Book%20movie%20-%20Chakra.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/Theater%20movie%20img/Chakra.jpg" alt=""></a></li>
