all the link has been reatteached

--- a/homepage - spourmo/pages/gallery 2.html
+++ b/homepage - spourmo/pages/gallery 2.html
@@ -75,21 +75,21 @@
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left"> 
         <!-- ################################################################################################ -->
-        <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">JORDUSH</a></h1>
+        <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo\index.html">JORDUSH</a></h1>
         <!-- ################################################################################################ -->
       </div>
       <nav id="mainav" class="fl_right"> 
         <!-- ################################################################################################ -->
         <ul class="clear">
-          <li class="active"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Home</a></li>
+          <li class="active"><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Home</a></li>
           <li><a class="drop" href="#">Filter</a>
             <ul>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Location</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Genre</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Language</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Parental Guidance</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Latest</a></li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Animated</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Location</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Genre</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Language</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Parental Guidance</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Latest</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Animated</a></li>
               <!--
               <li><a href="pages/full-width.html">Full Width</a></li>
               <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
@@ -101,7 +101,7 @@
           </li>
           <li><a class="drop" href="#">Screening type</a>
             <ul>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Theater</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Theater</a></li>
               <li><a class="drop" href="#">Special Screening</a>
                 <ul>
                   <li><a href="#">Mini-hall</a></li>
@@ -109,7 +109,7 @@
                   <li><a href="#">Other</a></li>
                 </ul>
               </li>
-              <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Watch now</a></li>
+              <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Watch now</a></li>
             </ul>
           </li>
           <li><a href="#">Plays/Dramas</a></li>
@@ -133,18 +133,18 @@
         <figure>
           <header class="heading">Enjoy Old Classics Here</header>
           <ul class="nospace clear">
-            <li class="one_quarter first"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\Classic movie player - Dhoom 2.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Dhoom 2.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Fight club.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Final destination.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\Classic movie player - Iron Man.html"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Iron man.jpeg" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Hera Pheri.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Jab we met.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Love aaj kal.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Robot.jpeg" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Monsters, INC..jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Sholay.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\Sivaji the boss.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\images\classic movie posters\The 40 year-old virgin.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/Classic%20movie%20player%20-%20Dhoom%202.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Dhoom%202.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Fight club.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Final%20destination.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/Classic%20movie%20player%20-%20Iron%20Man.html"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Iron man.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Hera%20Pheri.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Jab%20we%20met.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Love%20aaj%20kal.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Robot.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Monsters,%20INC..jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Sholay.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/Sivaji%20the%20boss.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a href="#"><img src="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/images/classic%20movie%20posters/The%2040%20year-old%20virgin.jpeg" alt=""></a></li>
           </ul>
           <!-- <figcaption>Gallery Description Goes Here</figcaption> -->
         </figure>
