All the link has been upadated

--- a/Movie outlet - basic-90/Book movie - Godzilla Vs kong.html
+++ b/Movie outlet - basic-90/Book movie - Godzilla Vs kong.html
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></h1>
       <h2>Movie Page - Godzilla Vs Kong</h2>
     </div>
     <form action="#" method="post">
@@ -22,10 +22,10 @@
     </form>
     <nav>
       <ul>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
         <li><a href="#">Plays/Dramas</a></li>
         <li><a href="#">Change Location</a></li>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Binge online</a></li>
       </ul>
     </nav>
   </header>
@@ -58,9 +58,9 @@
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Millie.jpeg" title= "Millie Bobby Brown" width="130" height="130" alt ="Millie Bobby Brown"></a></li>
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Alexander.jpeg" title= "Alexander Skarsgård" width="130" height="130" alt="Alexander Skarsgård"></a></li>
-              <li class="last"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Rebecca.jpeg" title= "Rebecca Hall" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Millie.jpeg" title= "Millie Bobby Brown" width="130" height="130" alt ="Millie Bobby Brown"></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Alexander.jpeg" title= "Alexander Skarsgård" width="130" height="130" alt="Alexander Skarsgård"></a></li>
+              <li class="last"><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Rebecca.jpeg" title= "Rebecca Hall" width="130" height="130" alt=""></a></li>
             </ul>
             <figcaption><a href="https://m.imdb.com/title/tt5034838/fullcredits/cast">View All Cast &raquo;</a></figcaption>
           </figure>
@@ -75,7 +75,7 @@
       <article>
         <footer>
           <ul class="nospace inline pushright">
-            <li><a class="btn inverse"  href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\hall seat trial\Theater - PVR.html"> PVR </a><a class="btn inverse" href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\hall seat trial\Theater - IMAX - Kong.html" > IMAX </a><a class="btn inverse" href="#" > INOX </a></li>
+            <li><a class="btn inverse"  href="https://akshatgaur2.github.io/Practice/hall%20seat%20trial/Theater%20-%20PVR.html"> PVR </a><a class="btn inverse" href="https://akshatgaur2.github.io/Practice/hall%20seat%20trial/Theater%20-%20IMAX%20-%20Kong.html" > IMAX </a><a class="btn inverse" href="#" > INOX </a></li>
           </ul>
         </footer>
       </article>
