all the links have been updated and checked

--- a/Movie outlet - basic-90/Book movie - Joker.html
+++ b/Movie outlet - basic-90/Book movie - Joker.html
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></h1>
       <h2>Movie Page - Joker</h2>
     </div>
     <form action="#" method="post">
@@ -22,10 +22,10 @@
     </form>
     <nav>
       <ul>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
         <li><a href="#">Plays/Dramas</a></li>
         <li><a href="#">Change Location</a></li>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Binge online</a></li>
       </ul>
     </nav>
   </header>
@@ -59,9 +59,9 @@
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Joaquin Phoenix.jpeg" title= "Joaquin Phoenix" width="130" height="130" alt ="Joaquin Phoenix"></a></li>
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Robert De Niro.jpeg" title= "Robert De Niro" width="130" height="130" alt=""></a></li>
-              <li class="last"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Zazie Beetz.jpeg" title= "Zazie Beetz" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Joaquin%20Phoenix.jpeg" title= "Joaquin Phoenix" width="130" height="130" alt ="Joaquin Phoenix"></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Robert%20De%0Niro.jpeg" title= "Robert De Niro" width="130" height="130" alt=""></a></li>
+              <li class="last"><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie outlet%20-%20basic-90/images/demo/Zazie%20Beetz.jpeg" title= "Zazie Beetz" width="130" height="130" alt=""></a></li>
             </ul>
             <figcaption><a href="https://www.imdb.com/title/tt7286456/">View All Cast &raquo;</a></figcaption>
           </figure>
@@ -76,7 +76,7 @@
       <article>
         <footer>
           <ul class="nospace inline pushright">
-            <li><a class="btn inverse"  href="#"> PVR </a><a class="btn inverse" href="#" > IMAX </a><a class="btn inverse" href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\INOX Seat booking\Theater - INOX.html" > INOX </a></li>
+            <li><a class="btn inverse"  href="#"> PVR </a><a class="btn inverse" href="#" > IMAX </a><a class="btn inverse" href="https://akshatgaur2.github.io/Practice/INOX%20Seat%20booking/Theater%20-%20INOX.html" > INOX </a></li>
           </ul>
         </footer>
       </article>
