--- a/homepage - spourmo/pages/gallery 2.html
+++ b/homepage - spourmo/pages/gallery 2.html
@@ -22,7 +22,7 @@
       <div class="fl_right">
         <ul class="nospace">
           <li><a href="#"><i class="fas fa-home"></i></a></li>
-          <li><a href="#" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
+          <li><a href="mailto:help@jordush.com" title="Help Centre"><i class="far fa-life-ring"></i></a></li>
           <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
           <li><a href="#" title="Sign Up"><i class="fas fa-edit"></i></a></li>
           <li id="searchform">
@@ -52,13 +52,13 @@
           <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Give us a call:</strong> +91 9001 894 191</span></div>
         </li>
         <li class="one_quarter">
-          <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> help@jordush.com</span></div>
+          <div class="block clear"><a href="mailto:help@jordush.com"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> help@jordush.com</span></div>
         </li>
         <li class="one_quarter">
           <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.:</strong> 08.00am - 5.00pm</span></div>
         </li>
         <li class="one_quarter">
-          <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="#">our location</a></span></div>
+          <div class="block clear"><a href="https://www.srmist.edu.in/"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="https://www.google.com/maps/place/SRM+Institute+of+Science+and+Technology/@12.823082,80.0420528,17z/data=!3m1!4b1!4m5!3m4!1s0x3a52f712b82a78d9:0xfdb944a3aee53831!8m2!3d12.823082!4d80.0442415">our location</a></span></div>
         </li>
       </ul>
       <!-- ################################################################################################ -->
