Update Classic movie player - Dhoom 2.html

--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/index.html">Jordush</a></h1>
       <h2>Watch Classics - Dhoom 2</h2>
     </div>
     <form action="#" method="post">
@@ -22,10 +22,10 @@
     </form>
     <nav>
       <ul>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
         <li><a href="#">Plays/Dramas</a></li>
         <li><a href="#">Change Location</a></li>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Binge online</a></li>
       </ul>
     </nav>
   </header>
@@ -36,7 +36,7 @@
     <!-- Slider -->
     <section id="slider" class="clear">
       <figure><video width="966" height="444" controls>
-        <source src="G:\Bollywood\Dh00m.2.2006.BR.007.M0viesC0unter.mkv" >
+        <source src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/view?usp=sharing" >
       Your browser does not support the video tag.
       </video>
       </figure>
