all the links have been updated

--- a/Movie outlet - basic-90/Book movie - Joker.html
+++ b/Movie outlet - basic-90/Book movie - Joker.html
@@ -132,7 +132,7 @@
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></p>
   </footer>
 </div>
 </body>
