all the link expect the video have been updated

--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -55,9 +55,9 @@
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Hrithik.jpeg" title= "Hrithik Roshan" width="130" height="130" alt ="Millie Bobby Brown"></a></li>
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Abhishek.jpeg" title= "Abhishek Bachchan" width="130" height="130" alt="Alexander Skarsgård"></a></li>
-              <li class="last"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Aishwarya Rai.jpeg" title= "Aishwarya Rai" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Hrithik.jpeg" title= "Hrithik Roshan" width="130" height="130" alt ="Millie Bobby Brown"></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Abhishek.jpeg" title= "Abhishek Bachchan" width="130" height="130" alt="Alexander Skarsgård"></a></li>
+              <li class="last"><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Aishwarya Rai.jpeg" title= "Aishwarya Rai" width="130" height="130" alt=""></a></li>
             </ul>
             <figcaption><a href="https://www.imdb.com/title/tt0441048/fullcredits">View All Cast &raquo;</a></figcaption>
           </figure>
@@ -128,7 +128,7 @@
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></p>
   </footer>
 </div>
 </body>
