Update Classic movie player - Dhoom 2.html

--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -36,7 +36,7 @@
     <!-- Slider -->
     <section id="slider" class="clear">
       <figure><video width="966" height="444" controls>
-        <source src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/view?usp=sharing" >
+        <source src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" >
       Your browser does not support the video tag.
       </video>
       </figure>
