--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -35,8 +35,9 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure>
-        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="640" height="480"></iframe>
+      <figure><video width="966" height="444" controls>
+        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="966" height="444"></iframe>
+      </video>
       </figure>
     </section>
     <!-- main content -->
