--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -35,9 +35,9 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure><video controls>
-        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="966" height="444"></iframe>
-      </video>
+      <figure>
+        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="966" height="444" controls></iframe>
+      
       </figure>
     </section>
     <!-- main content -->
