--- a/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
+++ b/Movie outlet - basic-90/Classic movie player - Dhoom 2.html
@@ -36,7 +36,8 @@
     <!-- Slider -->
     <section id="slider" class="clear">
       <figure>
-        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="966" height="444" controls></iframe>
+        <iframe src="https://drive.google.com/file/d/1q0LMKIGpw3QTpW5V0wZuP4ue811xK7p4/preview" width="966" height="444" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+picture-in-picture" allowfullscreen></iframe>
       
       </figure>
     </section>
