updated all the links

--- a/Movie outlet - basic-90/Classic movie player - Iron Man.html
+++ b/Movie outlet - basic-90/Classic movie player - Iron Man.html
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></h1>
       <h2>Watch Classics - Iron Man</h2>
     </div>
     <form action="#" method="post">
@@ -22,10 +22,10 @@
     </form>
     <nav>
       <ul>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
         <li><a href="#">Plays/Dramas</a></li>
         <li><a href="#">Change Location</a></li>
-        <li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+        <li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery%202.html">Binge online</a></li>
       </ul>
     </nav>
   </header>
@@ -55,9 +55,9 @@
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\RDJ.jpeg" title= "Robert Downey Jr." width="130" height="130" alt =""></a></li>
-              <li><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\John.jpeg" title= "John Favreau" width="130" height="130" alt=""></a></li>
-              <li class="last"><a href="#"><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\Movie outlet - basic-90\images\demo\Gwyneth.jpeg" title= "Gwyneth Paltrow" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/RDJ.jpeg" title= "Robert Downey Jr." width="130" height="130" alt =""></a></li>
+              <li><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/John.jpeg" title= "John Favreau" width="130" height="130" alt=""></a></li>
+              <li class="last"><a href="#"><img src="https://akshatgaur2.github.io/Practice/Movie%20outlet%20-%20basic-90/images/demo/Gwyneth.jpeg" title= "Gwyneth Paltrow" width="130" height="130" alt=""></a></li>
             </ul>
             <figcaption><a href="https://www.imdb.com/title/tt0371746/fullcredits">View All Cast &raquo;</a></figcaption>
           </figure>
@@ -128,7 +128,7 @@
 <!-- Footer -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></p>
   </footer>
 </div>
 </body>
