--- a/hall seat trial/Theater - IMAX - Chakra.html
+++ b/hall seat trial/Theater - IMAX - Chakra.html
@@ -15,7 +15,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\index.html">Jordush</a></h1>
+      <h1><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/index.html">Jordush</a></h1>
       <h2>IMAX : Seat booking</h2>
     </div>
     <form action="#" method="post">
@@ -27,10 +27,10 @@
     </form>
     <nav>
 		<ul>
-			<li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery.html">Select Movie</a></li>
+			<li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery.html">Select Movie</a></li>
 			<li><a href="#">Plays/Dramas</a></li>
 			<li><a href="#">Change Location</a></li>
-			<li><a href="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\homepage - spourmo\pages\gallery 2.html">Binge online</a></li>
+			<li><a href="https://akshatgaur2.github.io/Practice/homepage%20-%20spourmo/pages/gallery 2.html">Binge online</a></li>
 		</ul>
     </nav>
   </header>
@@ -40,7 +40,7 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure><img src="C:\Users\MRIGANK GAUR\Downloads\Ak acadmics\Sem 4\SEPM\Practice\hall seat trial\images\Chakra Poster.jpeg" alt="">
+      <figure><img src="https://akshatgaur2.github.io/Practice/hall%20seat%20trial/images/Chakra%20Poster.jpeg" alt="">
         <figcaption>
           <h3 style="font-size: 30px;">Chakra</h3>
           <p> The film plot is made revolving around the robbery by a gang of hackers and cyber criminals on the Independence Day of India.</p>
